2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding templates to create Non Abstract Classes from ObjectFactory.
	* The idea behind those templates is to help developper	
	of specific implementation to derive class from object factories.
	The design do not require to know the data structures implementing
	the abstract interface. This help to handle confidential or dirty code. 
	* interfaces/CMakeLists.txt: Adding installation of the templates.
	* interfaces/jrlDynamicRobotNA.hpp: New.
	* interfaces/jrlHumanoidDynamicRobotNA.hpp: New.

2009-06-28  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Change to have homogeneous handling of hands and feet.
	* interfaces/jrlFoot.h: Foot is not derived anymore
	from Joint but encapsulates a Joint as does Hand.
	Please uses associatedAnkle() to get the related
	joint. 

2009-06-25  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Changes in Foot::SoleSize() returns.
	* interfaces/jrlFoot.h: 
	Modified soleSize to not return anything.

2009-06-25  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Fix the deprecated attribute for footHeight().
	* interfaces/jrlHumanoidDynamicRobot.h: 
	Another fix for __attribute__ ((deprecated))
	It seems to be working on g++-4.3.3 .

2009-06-25  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Fixed a bug forbidding compilation for implementation.
	* interfaces/jrlHumanoidDynamicRobot.h: 
	A space is needed between 0 and __attribute__ .

2009-06-24  Florent Lamiraux  <florent@laas.fr>

	Merge branch humanoidspecificities.
	* ChangeLog: .
	* documentation/pictures/foot.fig: New.
	* documentation/pictures/foot.png: New.
	* interfaces/CMakeLists.txt: .
	* interfaces/jrlDynamicRobot.h: .
	* interfaces/jrlFoot.h: New.
	* interfaces/jrlHumanoidDynamicRobot.h: .
