@@ -1,3 +1,10 @@
+2009-06-30  Olivier Stasse  <olivier.stasse@aist.go.jp>
+
+	Adding footHeight() in the template for Non Abstract implementation.
+	* interfaces/jrlHumanoidDynamicRobotNA.hpp: 
+	Although deprecated footHeight is still necessary
+	to allow real allocation.
+
 2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>
 
 	Adding templates to create Non Abstract Classes from ObjectFactory.
